# lpb-ipc

./: CMakeLists.txt  doubler.cpp  doubler.h  main.cpp
src/: doubler.cpp  doubler.h  main.rs
